2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (any_path::as_internal): On second thought, return a
	utf8 object.
	* app_state.cc (set_database): Take a system_path.
	(set_pidfile): Likewise.
	* monotone.cc (cpp_main): Pass one.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* file_io.hh (get_homedir): Return a system_path.
	* app_state.hh (app_state): Make pidfile a system_path.
	* sanity.hh (sanity::filename): Make a system_path.
	* monotone.cc (cpp_main): Adjust accordingly.
	* paths.hh (any_path): Add as_internal() to interface.
	* paths.cc: Add roundtripping tests.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* platform.hh, unix/fs.cc, win32/fs.cc
	(change_current_working_dir): Take an any_path, not a string.
	* rcs_import.{cc,hh}: Convert to paths.hh.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (pid_file): Remove fs::path.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* mkstemp.cc (monotone_mkstemp): Remove references to fs::path.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (apply_rearrangement_to_filesystem): Oops, missed
	some local_path's.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* path_component.{cc,hh}: Delete.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (move_files_to_tmp_bottom_up) 
	(move_files_from_tmp_top_down): Convert to paths.hh.
	Whole file: stop using path_component.hh.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (test_bookkeeping_path): Oops, "" is an invalid
	bookkeeping_path.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* lua.cc, paths.cc: Few more tweaks for previous change.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh}: Add / operators.  Make that the usual way to use
	bookkeeping_path's.
	* work.cc: Adjust accordingly.
	* lua.cc (working_copy_rcfilename): Likewise.
	* commands.cc (update): Likewise.

2005-08-23  Nathaniel Smith  <njs@pobox.com>

	* paths.{cc,hh} (operator <<): Implement for any_paths.