@@ -61,6 +61,7 @@ public:
   //   -- are confirmed to be normalized and relative
   //   -- not to be in MT/
   file_path(source_type type, std::string const & path);
+  file_path(source_type type, utf8 const & path);
   // join a file_path out of pieces
   file_path(std::vector<path_component> const & pieces);
   
@@ -85,6 +86,7 @@ public:
   // and _should_ look like an internal path
   // usually you should just use the / operator as a constructor!
   bookkeeping_path(std::string const & path);
+  bookkeeping_path(utf8 const & path);
   std::string as_external() const;
   bookkeeping_path operator /(std::string const & to_append);
 };
@@ -99,6 +101,7 @@ public:
   // tilde-expanded.  it will considered to be relative to the directory
   // monotone started in.  it should be in utf8.
   system_path(std::string const & path);
+  system_path(utf8 const & path);
   bool empty() const;
   system_path operator /(std::string const & to_append);
 };
